dnl Process this file with autoconf to produce a configure script.

AC_INIT(gpaint-2, 0.3.3, http://savannah.gnu.org/bugs/?group=gpaint)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE
dnl AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_LIBTOOL
AM_PROG_CC_STDC
AC_HEADER_STDC
#------------------------------------------------------------------------------
# The gnomeui library is required but the gnomeprint and gnomeprintui libraries
# are optional. First we verify the gnomeui library is present. Then we check 
# for the presence of the gnomeprint libraries and set a flag to indicate the 
# print libraries are present. Finally, we run pkg-config to get the compile and
# link flags for the combined set of libraries to eliminate duplications in 
# the CFLAGS.
PKG_CHECK_MODULES(GUI, [gtk+-2.0 >= 2.8.0 pango >= 1.12.4 libglade-2.0 >= 2.5.1])
PKG_CHECK_MODULES(PRINT, libgnomeprint-2.2 libgnomeprintui-2.2,gpaint_have_gnome_print=1, echo "gnomeprint libraries are not available.")

PKG_CHECK_MODULES(GTKPRINT, gtk+-2.0 >= 2.10.0, gpaint_have_gtk_print=1, 
    echo "GtkPrint not available, not using for printing functions.")

AC_SUBST(GUI_CFLAGS)
AC_SUBST(GUI_LIBS)


if test "x$gpaint_have_gtk_print" = "x1"; then
    AC_DEFINE(HAVE_GTK_PRINT, "1")
    echo "printing support using gtk+"
elif test "x$gpaint_have_gnome_print" = "x1"; then
    AC_DEFINE(HAVE_GNOME_PRINT,"1")
    gpaint_gnome_libs="libgnomeprint-2.2 libgnomeprintui-2.2"

    echo "configuring with libraries: " $gpaint_gnome_libs
fi

AC_SUBST(PRINT_CFLAGS)
AC_SUBST(PRINT_LIBS)


GETTEXT_PACKAGE=gpaint-2
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
               
dnl Add the languages which your application supports here.
ALL_LINGUAS="am ca cs de es fr ga ja nl pt pt_BR sv uk"
AM_GLIB_GNU_GETTEXT


AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])


echo "
Configuration:

	Source code location:	  ${srcdir}
	Compiler:		  ${CC} 
	Extra Compiler Warnings:  ${EXTRA_WARNING_CFLAGS}

"
